Primeira edição do rodapé

--- a/index.html
+++ b/index.html
@@ -2096,13 +2096,15 @@
                     <div class="col-lg-3 col-md-6 g-mb-40 g-mb-0--lg">
                         <div class="u-heading-v2-3--bottom g-brd-white-opacity-0_8 g-mb-20">
                             <h2 class="u-heading-v2__title h6 text-uppercase mb-0">
-                                About Us
+                                Sobre a Simemap
                             </h2>
                         </div>
 
                         <p>
-                            About Unify dolor sit amet, consectetur adipiscing elit.
-                            Maecenas eget nisl id libero tincidunt sodales.
+                            A Simemap é uma startup que desenvolve seus próprios produtos, 
+                            incluindo Hardware e Software com ferramentas modernas de IoT. 
+                            Seja para instalações residenciais ou não-residenciais, você pode monitorar 
+                            e controlar seus equipamentos a partir do seu smartphone ou computador pessoal.
                         </p>
                     </div>
                     <!-- End Footer Content -->
@@ -2111,36 +2113,38 @@
                     <div class="col-lg-3 col-md-6 g-mb-40 g-mb-0--lg">
                         <div class="u-heading-v2-3--bottom g-brd-white-opacity-0_8 g-mb-20">
                             <h2 class="u-heading-v2__title h6 text-uppercase mb-0">
-                                Latest Posts
+                                Principais características
                             </h2>
                         </div>
 
                         <article>
                             <h3 class="h6 g-mb-2">
-                                <a class="g-color-white-opacity-0_8 g-color-white--hover" href="#">Incredible
-                                    template</a>
+                                <a class="g-color-white-opacity-0_8 g-color-white--hover" href="#">Monitoramento</a>
                             </h3>
-                            <div class="small g-color-white-opacity-0_6">May 8, 2017</div>
+                            <div class="small g-color-white-opacity-0_6">Consumo de energia elétrica ou água, 
+                                temperatura ou outras informações relevantes.</div>
                         </article>
 
                         <hr class="g-brd-white-opacity-0_1 g-my-10" />
 
                         <article>
                             <h3 class="h6 g-mb-2">
-                                <a class="g-color-white-opacity-0_8 g-color-white--hover" href="#">New features</a>
+                                <a class="g-color-white-opacity-0_8 g-color-white--hover" href="#">Automação</a>
                             </h3>
-                            <div class="small g-color-white-opacity-0_6">June 23, 2017</div>
+                            <div class="small g-color-white-opacity-0_6">Agendamento de eventos</div>
                         </article>
 
                         <hr class="g-brd-white-opacity-0_1 g-my-10" />
 
                         <article>
                             <h3 class="h6 g-mb-2">
-                                <a class="g-color-white-opacity-0_8 g-color-white--hover" href="#">New terms and
-                                    conditions</a>
+                                <a class="g-color-white-opacity-0_8 g-color-white--hover" href="#">Pesquisa e 
+                                    Inovação</a>
                             </h3>
                             <div class="small g-color-white-opacity-0_6">
-                                September 15, 2017
+                                Simemap é a primeira empresa incubada nascida no IFTO. É fruto de pesquisa acadêmica 
+                                iniciada em 2016, e busca trazer também a alunos do Instituto Federal 
+                                oportunidades de conhecer novas tecnologias.
                             </div>
                         </article>
                     </div>
@@ -2150,7 +2154,7 @@
                     <div class="col-lg-3 col-md-6 g-mb-40 g-mb-0--lg">
                         <div class="u-heading-v2-3--bottom g-brd-white-opacity-0_8 g-mb-20">
                             <h2 class="u-heading-v2__title h6 text-uppercase mb-0">
-                                Useful Links
+                                Saiba mais
                             </h2>
                         </div>
 
@@ -2158,34 +2162,19 @@
                             <ul class="list-unstyled g-mt-minus-10 mb-0">
                                 <li class="g-pos-rel g-brd-bottom g-brd-white-opacity-0_1 g-py-10">
                                     <h4 class="h6 g-pr-20 mb-0">
-                                        <a class="g-color-white-opacity-0_8 g-color-white--hover" href="#">About Us</a>
+                                        <a class="g-color-white-opacity-0_8 g-color-white--hover" href="#">Sobre</a>
                                         <i class="fa fa-angle-right g-absolute-centered--y g-right-0"></i>
                                     </h4>
                                 </li>
                                 <li class="g-pos-rel g-brd-bottom g-brd-white-opacity-0_1 g-py-10">
                                     <h4 class="h6 g-pr-20 mb-0">
-                                        <a class="g-color-white-opacity-0_8 g-color-white--hover" href="#">Portfolio</a>
+                                        <a class="g-color-white-opacity-0_8 g-color-white--hover" href="#">Características</a>
                                         <i class="fa fa-angle-right g-absolute-centered--y g-right-0"></i>
                                     </h4>
                                 </li>
                                 <li class="g-pos-rel g-brd-bottom g-brd-white-opacity-0_1 g-py-10">
                                     <h4 class="h6 g-pr-20 mb-0">
-                                        <a class="g-color-white-opacity-0_8 g-color-white--hover" href="#">Our
-                                            Services</a>
-                                        <i class="fa fa-angle-right g-absolute-centered--y g-right-0"></i>
-                                    </h4>
-                                </li>
-                                <li class="g-pos-rel g-brd-bottom g-brd-white-opacity-0_1 g-py-10">
-                                    <h4 class="h6 g-pr-20 mb-0">
-                                        <a class="g-color-white-opacity-0_8 g-color-white--hover" href="#">Latest
-                                            Jobs</a>
-                                        <i class="fa fa-angle-right g-absolute-centered--y g-right-0"></i>
-                                    </h4>
-                                </li>
-                                <li class="g-pos-rel g-py-10">
-                                    <h4 class="h6 g-pr-20 mb-0">
-                                        <a class="g-color-white-opacity-0_8 g-color-white--hover" href="#">Contact
-                                            Us</a>
+                                        <a class="g-color-white-opacity-0_8 g-color-white--hover" href="#">Serviços</a>
                                         <i class="fa fa-angle-right g-absolute-centered--y g-right-0"></i>
                                     </h4>
                                 </li>
@@ -2198,7 +2187,7 @@
                     <div class="col-lg-3 col-md-6">
                         <div class="u-heading-v2-3--bottom g-brd-white-opacity-0_8 g-mb-20">
                             <h2 class="u-heading-v2__title h6 text-uppercase mb-0">
-                                Our Contacts
+                                Contate-nos!
                             </h2>
                         </div>
 
@@ -2213,8 +2202,8 @@
                                     </span>
                                 </div>
                                 <p class="mb-0">
-                                    795 Folsom Ave, Suite 600, <br />
-                                    San Francisco, CA 94107 795
+                                    Bloco 11, IFTO, <br />
+                                    Palmas, TO - Brasil
                                 </p>
                             </div>
                             <!-- End Location -->
@@ -2228,8 +2217,7 @@
                                     </span>
                                 </div>
                                 <p class="mb-0">
-                                    (+123) 456 7890 <br />
-                                    (+123) 456 7891
+                                    (63) 98494 3041
                                 </p>
                             </div>
                             <!-- End Phone -->
@@ -2244,10 +2232,10 @@
                                 </div>
                                 <p class="mb-0">
                                     <a class="g-color-white-opacity-0_8 g-color-white--hover"
-                                        href="mailto:info@htmlstream.com">info@htmlstream.com</a>
+                                        href="mailto:simemap@simemap.com<">simemap@simemap.com</a>
                                     <br />
                                     <a class="g-color-white-opacity-0_8 g-color-white--hover"
-                                        href="#">www.htmlstream.com</a>
+                                        href="#">www.simemap.com</a>
                                 </p>
                             </div>
                             <!-- End Email and Website -->
