--- a/index.html
+++ b/index.html
@@ -1424,11 +1424,11 @@
             <div class="container g-py-200">
                 <div class="row">
                     <div class="col-md-6">
-                        <h3 class="g-color-black g-font-weight-300 g-font-size-40 g-line-height-1_2 mb-4">
-                            Have an easy<br />website with Unify
+                        <h3 class="g-color-white g-font-weight-400 g-font-size-40 g-line-height-1_2 mb-4">
+                            Eficiência Energética<br /> IoT a serviço da natureza
                         </h3>
-                        <span class="d-block g-color-black-opacity-0_8 g-font-size-16 mb-5">Build, share, sell and
-                            enjoy.</span>
+                        <span class="d-block g-color-white g-font-size-16 mb-5">Utilização racional dos recursos 
+                            natirais</span>
                     </div>
                 </div>
             </div>
