Otimização do uso energético

--- a/index.html
+++ b/index.html
@@ -1427,8 +1427,7 @@
                         <h3 class="g-color-white g-font-weight-400 g-font-size-40 g-line-height-1_2 mb-4">
                             Eficiência Energética<br /> IoT a serviço da natureza
                         </h3>
-                        <span class="d-block g-color-white g-font-size-16 mb-5">Utilização racional dos recursos 
-                            natirais</span>
+                        <span class="d-block g-color-white g-font-size-16 mb-5">Otimização do uso energético</span>
                     </div>
                 </div>
             </div>
