Automação, Monitoramento, Economia

--- a/index.html
+++ b/index.html
@@ -1446,7 +1446,7 @@
                                 <i class="icon-finance-086 u-line-icon-pro"></i>
                             </span>
                             <h3 class="h5 g-color-gray-dark-v2 g-font-weight-600 text-uppercase mb-3">
-                                Invest To Us
+                                Automação
                             </h3>
                             <p class="mb-0">
                                 We strive to embrace and drive change in our industry which
@@ -1464,7 +1464,7 @@
                                 <i class="icon-finance-196 u-line-icon-pro"></i>
                             </span>
                             <h3 class="h5 g-color-gray-dark-v2 g-font-weight-600 text-uppercase mb-3">
-                                Increase Income
+                                Monitoramento
                             </h3>
                             <p class="mb-0">
                                 We strive to embrace and drive change in our industry which
@@ -1482,7 +1482,7 @@
                                 <i class="icon-finance-147 u-line-icon-pro"></i>
                             </span>
                             <h3 class="h5 g-color-gray-dark-v2 g-font-weight-600 text-uppercase mb-3">
-                                Collect Cash
+                                Economia
                             </h3>
                             <p class="mb-0">
                                 We strive to embrace and drive change in our industry which
