--- a/index.html
+++ b/index.html
@@ -1505,7 +1505,7 @@
                     <div class="col-lg-6 align-self-center g-mb-100 g-mb-0--lg">
                         <header class="u-heading-v2-3--bottom g-brd-primary g-mb-20">
                             <h2 class="h4 u-heading-v2__title g-color-gray-dark-v2 g-font-weight-600 text-uppercase">
-                                About Our Company
+                                A SIMEMAP
                             </h2>
                         </header>
 
@@ -1518,19 +1518,23 @@
                         <ul class="list-unstyled g-color-gray-dark-v4 mb-0">
                             <li class="d-flex g-mb-10">
                                 <i class="icon-check g-color-primary g-mt-5 g-mr-10"></i>
-                                Included Over 2000+ UI Components
+                                Hardwares certificados pela ANATEL
                             </li>
                             <li class="d-flex g-mb-10">
                                 <i class="icon-check g-color-primary g-mt-5 g-mr-10"></i>
-                                Beautiful Eye Catching Demos
-                            </li>
-                            <li class="d-flex g-mb-10">
-                                <i class="icon-check g-color-primary g-mt-5 g-mr-10"></i> Over
-                                30+ Beautiful Thematic Examples
+                                Arquitetura baseada no Cloud AWS
                             </li>
                             <li class="d-flex g-mb-10">
                                 <i class="icon-check g-color-primary g-mt-5 g-mr-10"></i>
-                                Semantic HTML5/CSS3 Codes
+                                Certificados de Segurança AWS
+                            </li>
+                            <li class="d-flex g-mb-10">
+                                <i class="icon-check g-color-primary g-mt-5 g-mr-10"></i>
+                                Mais moderna tecnologia em IoT Empresarial e Residencial
+                            </li>
+                            <li class="d-flex g-mb-10">
+                                <i class="icon-check g-color-primary g-mt-5 g-mr-10"></i>
+                                Algorítimos de monitoramento de qualidade energética
                             </li>
                         </ul>
                     </div>
@@ -1539,7 +1543,7 @@
                         style="background-image: url(assets/img/maps/map3.png);">
                         <div class="g-absolute-centered text-center w-100 g-px-40">
                             <h2 class="h1 g-color-gray-light-v2 g-font-weight-600 g-letter-spacing-0_5">
-                                Unify is
+                                SMEMAP é
                                 <span class="u-text-animation u-text-animation--typing"></span>
                             </h2>
                         </div>
@@ -2385,9 +2389,10 @@
             // initialization of text animation (typing)
             $(".u-text-animation.u-text-animation--typing").typed({
                 strings: [
-                    "an awesome template",
-                    "perfect template",
-                    "just like a boss",
+                    "automação e monitoramento",
+                    "eficiência",
+                    "economia 4.0",
+                    "internet das coisas",
                 ],
                 typeSpeed: 60,
                 loop: true,
