--- a/index.html
+++ b/index.html
@@ -1898,23 +1898,23 @@
                 <div class="row text-center text-uppercase">
                     <div class="col-lg-3 col-sm-6 g-brd-right g-brd-gray-light-v4 g-mb-50">
                         <div class="js-counter g-color-gray-dark-v2 g-font-size-35 g-font-weight-300 g-mb-7">
-                            52147
+                            +50
                         </div>
-                        <h4 class="h6 g-color-gray-dark-v5">Code Lines</h4>
+                        <h4 class="h6 g-color-gray-dark-v5">Clientes Satisfeitos</h4>
                     </div>
 
                     <div class="col-lg-3 col-sm-6 g-brd-right--lg g-brd-gray-light-v4 g-mb-50">
                         <div class="js-counter g-color-gray-dark-v2 g-font-size-35 g-font-weight-300 g-mb-7">
-                            24583
+                            +250
                         </div>
-                        <h4 class="h6 g-color-gray-dark-v5">Projects</h4>
+                        <h4 class="h6 g-color-gray-dark-v5">Dispositivos Conectados</h4>
                     </div>
 
                     <div class="col-lg-3 col-sm-6 g-brd-right g-brd-gray-light-v4 g-mb-50">
                         <div class="js-counter g-color-gray-dark-v2 g-font-size-35 g-font-weight-300 g-mb-7">
-                            7348
+                            1.5 M
                         </div>
-                        <h4 class="h6 g-color-gray-dark-v5">Working Hours</h4>
+                        <h4 class="h6 g-color-gray-dark-v5">Mensagens Diárias</h4>
                     </div>
 
                     <div class="col-lg-3 col-sm-6 g-mb-50">
