About Our Company

--- a/index.html
+++ b/index.html
@@ -1522,7 +1522,7 @@
                             </li>
                             <li class="d-flex g-mb-10">
                                 <i class="icon-check g-color-primary g-mt-5 g-mr-10"></i>
-                                Arquitetura baseada no Cloud AWS
+                                Arquitetura baseada na AWS Cloud 
                             </li>
                             <li class="d-flex g-mb-10">
                                 <i class="icon-check g-color-primary g-mt-5 g-mr-10"></i>
