About Our Company

--- a/index.html
+++ b/index.html
@@ -1530,7 +1530,12 @@
                             </li>
                             <li class="d-flex g-mb-10">
                                 <i class="icon-check g-color-primary g-mt-5 g-mr-10"></i>
-                                Mais moderna tecnologia em IoT Empresarial e Residencial
+                                Mais modernas tecnologias em IoT Empresarial e Residencial
+                            </li>
+                            </li>
+                            <li class="d-flex g-mb-10">
+                                <i class="icon-check g-color-primary g-mt-5 g-mr-10"></i>
+                                GSM dedicado, WiFi, bluetooth, Bluetooth Low Energy & BLE Mesh Networking, LoRa
                             </li>
                             <li class="d-flex g-mb-10">
                                 <i class="icon-check g-color-primary g-mt-5 g-mr-10"></i>
@@ -1934,7 +1939,7 @@
                 <header class="g-mb-50">
                     <div class="u-heading-v2-3--bottom g-brd-primary g-mb-20">
                         <h2 class="h4 u-heading-v2__title g-color-gray-dark-v2 g-font-weight-600 text-uppercase">
-                            Our Latest News
+                            Ùltimas Notícias
                         </h2>
                     </div>
                     <p class="g-font-size-16">
@@ -1950,9 +1955,7 @@
                         <article class="u-shadow-v11 rounded">
                             <div class="g-pa-30">
                                 <h3 class="g-font-weight-300 g-mb-15">
-                                    <a class="u-link-v5 g-color-gray-dark-v2 g-color-primary--hover" href="#">Focused on
-                                        helping our clients to build a great
-                                        business</a>
+                                    <a class="u-link-v5 g-color-gray-dark-v2 g-color-primary--hover" href="#">Implementação de Criptografia no LoRa</a>
                                 </h3>
                                 <p>
                                     At vero eos et accusamus et iusto odio dignissimos ducimus
