remoção dos botões desnecessários

--- a/index.html
+++ b/index.html
@@ -1401,11 +1401,13 @@
                         </div>
                         <!-- End Navigation -->
 
-                        <div class="d-inline-block g-hidden-md-down g-pos-rel g-valign-middle g-pl-30 g-pl-0--lg">
+                        <!-- botão -->
+
+                        <!-- <div class="d-inline-block g-hidden-md-down g-pos-rel g-valign-middle g-pl-30 g-pl-0--lg">
                             <a class="btn u-btn-outline-primary g-font-size-13 text-uppercase g-py-10 g-px-15"
                                 href="https://wrapbootstrap.com/theme/unify-responsive-website-template-WB0412697?ref=htmlstream"
                                 target="_blank">Purchase now</a>
-                        </div>
+                        </div> -->
                     </div>
                 </nav>
             </div>
@@ -1737,11 +1739,11 @@
                                 src="assets/img-temp/200x100/img3.png" alt="Image description" />
                         </div>
 
-                        <a href="#"
+                        <!-- <a href="#"
                             class="btn btn-xl u-btn-primary text-uppercase g-font-weight-600 g-font-size-12 rounded g-mr-15 g-mb-15 g-mb-0--sm">Buy
                             Full Version</a>
                         <small class="d-block d-sm-inline-block g-color-gray-dark-v5 g-font-size-12">*Exclusive item on
-                            Wrapboostrap Marketpalce</small>
+                            Wrapboostrap Marketpalce</small> -->
                     </div>
                     <!-- End Section Content -->
 
@@ -1886,10 +1888,10 @@
                                 even slightly believable.
                             </p>
                         </div>
-                        <a class="btn btn-xl u-btn-primary text-uppercase g-font-weight-600 g-font-size-12 rounded g-mr-15 g-mb-10 g-mb-0--sm"
+                        <!-- <a class="btn btn-xl u-btn-primary text-uppercase g-font-weight-600 g-font-size-12 rounded g-mr-15 g-mb-10 g-mb-0--sm"
                             href="#">Check It Now</a>
                         <small class="d-block d-sm-inline-block g-color-gray-dark-v5 g-font-size-12">*Sponsored by Unify
-                            team in Htmlstream.</small>
+                            team in Htmlstream.</small> -->
                     </div>
                     <!-- End Section Content -->
                 </div>
@@ -2077,11 +2079,12 @@
                         We offer best in class service for your needs
                     </p>
                 </div>
-                <div class="align-self-md-center">
+                <!-- botão -->
+                <!-- <div class="align-self-md-center">
                     <a class="btn btn-lg u-btn-white text-uppercase g-font-weight-600 g-font-size-12" target="_blank"
                         href="https://wrapbootstrap.com/theme/unify-responsive-website-template-WB0412697?ref=htmlstream">Purchase
                         Now</a>
-                </div>
+                </div> -->
             </div>
         </section>
         <!-- End Call To Action -->
