desativação menu intro

--- a/index.html
+++ b/index.html
@@ -90,9 +90,9 @@
                             id="navBar">
                             <ul class="navbar-nav text-uppercase g-pos-rel g-font-weight-600 ml-auto">
                                 <!-- Intro -->
-                                <li class="nav-item g-mx-10--lg g-mx-15--xl">
+                                <!-- <li class="nav-item g-mx-10--lg g-mx-15--xl">
                                     <a href="../../index.html" class="nav-link g-py-7 g-px-0">Intro</a>
-                                </li>
+                                </li> -->
                                 <!-- End Intro -->
 
                                 <!-- Home -->
