--- a/index.html
+++ b/index.html
@@ -1241,15 +1241,15 @@
                                 <!-- End Shortcodes -->
 
                                 <!-- Demos -->
-                                <li class="nav-item hs-has-sub-menu g-mx-10--lg g-mx-15--xl" data-animation-in="fadeIn"
-                                    data-animation-out="fadeOut">
-                                    <a id="nav-link-demos" class="nav-link g-py-7 g-px-0" href="#" aria-haspopup="true"
-                                        aria-expanded="false" aria-controls="nav-submenu-demos">Demos</a>
+                                <!-- <li class="nav-item hs-has-sub-menu g-mx-10--lg g-mx-15--xl" data-animation-in="fadeIn"
+                                    data-animation-out="fadeOut"> -->
+                                    <!-- <a id="nav-link-demos" class="nav-link g-py-7 g-px-0" href="#" aria-haspopup="true"
+                                        aria-expanded="false" aria-controls="nav-submenu-demos">Demos</a> -->
 
-                                    <ul class="hs-sub-menu list-unstyled u-shadow-v11 g-brd-top g-brd-primary g-brd-top-2 g-min-width-220 g-mt-18 g-mt-8--lg--scrolling"
-                                        id="nav-submenu-demos" aria-labelledby="nav-link-demos">
+                                    <!-- <ul class="hs-sub-menu list-unstyled u-shadow-v11 g-brd-top g-brd-primary g-brd-top-2 g-min-width-220 g-mt-18 g-mt-8--lg--scrolling"
+                                        id="nav-submenu-demos" aria-labelledby="nav-link-demos"> -->
                                         <!-- Demos - One Pages -->
-                                        <li class="dropdown-item hs-has-sub-menu">
+                                        <!-- <li class="dropdown-item hs-has-sub-menu">
                                             <a id="nav-link--demos--one-page" class="nav-link" href="#"
                                                 aria-haspopup="true" aria-expanded="false"
                                                 aria-controls="nav-submenu--demos--one-page">One Pages</a>
@@ -1342,60 +1342,60 @@
                                                         target="_blank">Wedding</a>
                                                 </li>
                                             </ul>
-                                        </li>
+                                        </li> -->
                                         <!-- End Demos - One Pages -->
 
                                         <!-- Demos - Admin Template -->
-                                        <li class="dropdown-item">
+                                        <!-- <li class="dropdown-item">
                                             <a class="nav-link" href="../../admin-template/dashboards/dashboard-v1.html"
                                                 target="_blank">Admin Template
                                                 <span
                                                     class="u-label g-rounded-3 g-font-size-10 g-bg-lightred g-py-3 g-pos-rel g-top-minus-1 g-ml-5">New</span></a>
-                                        </li>
+                                        </li> -->
                                         <!-- End Demos - Admin Template -->
 
                                         <!-- Demos - E-Commerce -->
-                                        <li class="dropdown-item">
+                                        <!-- <li class="dropdown-item">
                                             <a class="nav-link" href="../../e-commerce/home-page-1.html"
                                                 target="_blank">E-Commerce
                                                 <span class="g-opacity-0_5">(44 Pages)</span></a>
-                                        </li>
+                                        </li> -->
                                         <!-- End Demos - E-Commerce -->
 
                                         <!-- Demos - University -->
-                                        <li class="dropdown-item">
+                                        <!-- <li class="dropdown-item">
                                             <a class="nav-link" href="../../multipage/education/home-page-1.html"
                                                 target="_blank">University
                                                 <span class="g-opacity-0_5">(13 Pages)</span></a>
-                                        </li>
+                                        </li> -->
                                         <!-- End Demos - University -->
 
                                         <!-- Demos - Marketing -->
-                                        <li class="dropdown-item">
+                                        <!-- <li class="dropdown-item">
                                             <a class="nav-link" href="../../multipage/marketing/home-page-1.html"
                                                 target="_blank">Marketing
                                                 <span class="g-opacity-0_5">(10 Pages)</span></a>
-                                        </li>
+                                        </li> -->
                                         <!-- End Demos - Marketing -->
 
                                         <!-- Demos - Real Estate -->
-                                        <li class="dropdown-item">
+                                        <!-- <li class="dropdown-item">
                                             <a class="nav-link" href="../../multipage/real-estate/home-page-1.html"
                                                 target="_blank">Real Estate
                                                 <span class="g-opacity-0_5">(13 Pages)</span></a>
-                                        </li>
+                                        </li> -->
                                         <!-- End Demos - Real Estate -->
 
                                         <!-- Demos - Blogs & Magazines -->
-                                        <li class="dropdown-item">
+                                        <!-- <li class="dropdown-item">
                                             <a class="nav-link"
                                                 href="../../multipage/blog-magazine/classic/bm-classic-home-page-1.html"
                                                 target="_blank">Blogs &amp; Magazines
                                                 <span class="g-opacity-0_5">(6 Pages)</span></a>
-                                        </li>
+                                        </li> -->
                                         <!-- End Demos - Blogs & Magazines -->
-                                    </ul>
-                                </li>
+                                    <!-- </ul> -->
+                                <!-- </li> -->
                                 <!-- End Demos -->
                             </ul>
                         </div>
