mudanças de nomes menu  - parte 1

--- a/index.html
+++ b/index.html
@@ -1105,7 +1105,7 @@
                                     data-animation-out="fadeOut">
                                     <a id="nav-link--features" class="nav-link g-py-7 g-px-0" href="#"
                                         aria-haspopup="true" aria-expanded="false"
-                                        aria-controls="nav-submenu--features">Features</a>
+                                        aria-controls="nav-submenu--features">CONTATOS</a>
 
                                     <ul class="hs-sub-menu list-unstyled u-shadow-v11 g-brd-top g-brd-primary g-brd-top-2 g-min-width-220 g-mt-18 g-mt-8--lg--scrolling"
                                         id="nav-submenu--features" aria-labelledby="nav-link--features">
@@ -1201,7 +1201,7 @@
                                         <li class="dropdown-item hs-has-sub-menu">
                                             <a id="nav-link--features--footers" class="nav-link" href="#"
                                                 aria-haspopup="true" aria-expanded="false"
-                                                aria-controls="nav-submenu--features--footers">Footers</a>
+                                                aria-controls="nav-submenu--features--footers">CONTATOS</a>
 
                                             <ul class="hs-sub-menu list-unstyled u-shadow-v11 g-brd-top g-brd-primary g-brd-top-2 g-min-width-220 g-mt-minus-2"
                                                 id="nav-submenu--features--footers"
@@ -1236,7 +1236,7 @@
                                 <!-- Shortcodes -->
                                 <li class="nav-item g-mx-10--lg g-mx-15--xl">
                                     <a href="../../unify-main/shortcodes/index.html"
-                                        class="nav-link g-py-7 g-px-0">Shortcodes</a>
+                                        class="nav-link g-py-7 g-px-0">SOBRE</a>
                                 </li>
                                 <!-- End Shortcodes -->
 
